yoh :-( Booking a unit does not work part 2
